kpt/heaven-chrome-kpt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heaven-chrome-kpt
  namespace: default
  labels:
    app.kubernetes.io/name: heaven-chrome-kpt
    app.kubernetes.io/instance: heaven-chrome-kpt
    app.kubernetes.io/managed-by: kpt
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: heaven-chrome-kpt
    app.kubernetes.io/instance: heaven-chrome-kpt
